# constants/constants.go
@@ -5,13 +5,14 @@ const (
 	STATUS_PATH = "/api/health" // GET
 
 	// users
-	USER           = "/api/user"                     // POST
-	USER_NAME      = "/api/user/{username}"          // GET|DELETE|PUT
-	ALL_USERS      = "/api/users"                    // GET
-	REVOKE_USER    = "/api/user/{username}/revoke"   // PUT
-	RESET_PASSWORD = "/api/user/{username}/password" // PUT
-	LOGIN          = "/api/user/login"               // POST
-	LOGOUT         = "/api/user/logout"              // POST
+	USER                = "/api/user"                     // POST
+	USER_NAME           = "/api/user/{username}"          // GET|DELETE|PUT
+	ALL_USERS           = "/api/users"                    // GET
+	REVOKE_USER         = "/api/user/{username}/revoke"   // PUT
+	RESET_PASSWORD      = "/api/user/{username}/password" // PUT
+	LOGIN               = "/api/user/login"               // POST
+	LOGOUT              = "/api/user/logout"              // POST
+	RESET_PASSWORD_USER = "/api/user/password/reset"      // PUT
 
 	// update roles
 	QUESTION       = "/api/question/{category}"  // POST
